--- a/RobuxTycoon/floor1/index.html
+++ b/RobuxTycoon/floor1/index.html
@@ -13,7 +13,7 @@
 
         <div id="clickRate">*1</div>
         <div id="clickCost">R$100</div>
-        <button id="click">Click Multiplyer</button>
+        <button id="click">Click Multiplier</button>
         
         <div id="noobRate">R$1:10s</div>
         <div id="noobCost">R$15</div>
