--- a/RobuxTycoon/floor3/index.html
+++ b/RobuxTycoon/floor3/index.html
@@ -11,37 +11,41 @@
         <img id="conveyor" src="/imgs/conveyorbelt.png">
         <button id="dispenserButton" type="submit"><img id="dispenser" src="/imgs/dispenser.png"></button>
 
-        <div id="mineRate">R$1:10s</div>
-        <div id="mineCost">R$15</div>
-        <div id="mineAmount">0</div>
-        <button id="mine">Mine</button>
+        <div id="prestiegeRate">*1</div>
+        <div id="prestiegeCost">R$12500000000000</div>
+        <button id="prestiege">Prestige</button>
+        
+        <div id="f31Rate">R$1:10s</div>
+        <div id="f31Cost">R$15</div>
+        <div id="f31Amount">0</div>
+        <button id="f31">???</button>
 
-        <div id="printerRate">R$1:1s</div>
-        <div id="printerCost">R$100</div>
-        <div id="printerAmount">0</div>
-        <button id="printer">Robux Printer</button>
+        <div id="f32Rate">R$1:1s</div>
+        <div id="f32Cost">R$100</div>
+        <div id="f32Amount">0</div>
+        <button id="f32">???</button>
 
-        <div id="childRate">R$10:1s</div>
-        <div id="childCost">R$1500</div>
-        <div id="childAmount">0</div>
-        <button id="child">Child Laborer</button>
+        <div id="f33Rate">R$10:1s</div>
+        <div id="f33Cost">R$1500</div>
+        <div id="f33Amount">0</div>
+        <button id="f33">???</button>
 
-        <div id="dominusRate">R$50:1s</div>
-        <div id="dominusCost">R$12500</div>
-        <div id="dominusAmount">0</div>
-        <button id="dominus">Dominus</button>
+        <div id="f34Rate">R$50:1s</div>
+        <div id="f34Cost">R$12500</div>
+        <div id="f34Amount">0</div>
+        <button id="f34">???</button>
 
-        <div id="adminRate">R$250:1s</div>
-        <div id="adminCost">R$150000</div>
-        <div id="adminAmount">0</div>
-        <button id="admin">Roblox Admin</button>
+        <div id="f35Rate">R$250:1s</div>
+        <div id="f35Cost">R$150000</div>
+        <div id="f35Amount">0</div>
+        <button id="f35">???</button>
 
-        <div id="fireRate">R$1500:1s</div>
-        <div id="fireCost">R$1500000</div>
-        <div id="fireAmount">0</div>
-        <button id="fire">???</button>
+        <div id="f36Rate">R$1500:1s</div>
+        <div id="f36Cost">R$1500000</div>
+        <div id="f36Amount">0</div>
+        <button id="f36">???</button>
 
-        <button id="floor3">Floor 3</button>
+        <button id="floor1">Floor 1</button>
 
         <button id="save">Save</button>
 
